--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,29 @@
 # Shared
 SEPOLIA_RPC_URL=
+BASE_RPC_URL=
 DEPLOYER_PRIVATE_KEY=
 MARKET_ID=ETH-USD
+CHAIN_ID=8453
 
 # Deployed contracts (after deploy)
 ENGINE_ADDRESS=
 ORACLE_ADDRESS=
 COLLATERAL_ADDRESS=
 ORDERBOOK_ADDRESS=
+ENGINE_V2_ADDRESS=
+ORDERBOOK_V2_ADDRESS=
+ORACLE_ROUTER_ADDRESS=
+VAULT_ADDRESS=
+INSURANCE_ADDRESS=
+PROOF_OF_RESERVES_ADDRESS=
 DATABASE_URL=
 
 # API
 API_PORT=3001
 PRICE_FEED_URL=https://api.coingecko.com/api/v3/simple/price?ids=ethereum,usd-coin&vs_currencies=usd&include_24hr_change=true
 KEEPER_PRIVATE_KEY=
+RESERVES_KEEPER_ENABLED=true
+RESERVES_KEEPER_INTERVAL=3600000
 
 # Web
 VITE_API_URL=http://localhost:3001
@@ -21,5 +31,12 @@ VITE_ENGINE_ADDRESS=
 VITE_ORACLE_ADDRESS=
 VITE_COLLATERAL_ADDRESS=
 VITE_ORDERBOOK_ADDRESS=
+VITE_ENGINE_V2_ADDRESS=
+VITE_ORDERBOOK_V2_ADDRESS=
+VITE_ORACLE_ROUTER_ADDRESS=
+VITE_COLLATERAL_V2_ADDRESS=
+VITE_VAULT_ADDRESS=
+VITE_INSURANCE_ADDRESS=
+VITE_CHAIN_ID=8453
 VITE_MARKET_ID=ETH-USD
 VITE_WC_PROJECT_ID=
