--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,10 +1,20 @@
 API_PORT=3001
 SEPOLIA_RPC_URL=
+BASE_RPC_URL=
 ENGINE_ADDRESS=
 ORACLE_ADDRESS=
 COLLATERAL_ADDRESS=
 ORDERBOOK_ADDRESS=
+ENGINE_V2_ADDRESS=
+ORDERBOOK_V2_ADDRESS=
+ORACLE_ROUTER_ADDRESS=
+VAULT_ADDRESS=
+INSURANCE_ADDRESS=
+PROOF_OF_RESERVES_ADDRESS=
 DATABASE_URL=
 MARKET_ID=ETH-USD
+CHAIN_ID=8453
 PRICE_FEED_URL=https://api.coingecko.com/api/v3/simple/price?ids=ethereum,usd-coin&vs_currencies=usd&include_24hr_change=true
 KEEPER_PRIVATE_KEY=
+RESERVES_KEEPER_ENABLED=true
+RESERVES_KEEPER_INTERVAL=3600000
