--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -3,5 +3,12 @@ VITE_ENGINE_ADDRESS=
 VITE_ORACLE_ADDRESS=
 VITE_COLLATERAL_ADDRESS=
 VITE_ORDERBOOK_ADDRESS=
+VITE_ENGINE_V2_ADDRESS=
+VITE_ORDERBOOK_V2_ADDRESS=
+VITE_ORACLE_ROUTER_ADDRESS=
+VITE_COLLATERAL_V2_ADDRESS=
+VITE_VAULT_ADDRESS=
+VITE_INSURANCE_ADDRESS=
+VITE_CHAIN_ID=8453
 VITE_MARKET_ID=ETH-USD
 VITE_WC_PROJECT_ID=
